tests/baselines/reference/parserSkippedTokens17.errors.txt
parserSkippedTokens17.ts(1,1): error TS2304: Cannot find name 'foo'.
parserSkippedTokens17.ts(1,5): error TS2304: Cannot find name 'a'.
parserSkippedTokens17.ts(1,8): error TS1127: Invalid character.
parserSkippedTokens17.ts(1,9): error TS1005: ')' expected.


==== parserSkippedTokens17.ts (4 errors) ====
    foo(a, \
    ~~~
!!! error TS2304: Cannot find name 'foo'.
        ~
!!! error TS2304: Cannot find name 'a'.
           
!!! error TS1127: Invalid character.
            
!!! error TS1005: ')' expected.